--- a/src/main/resources/org/glass/css/style.css
+++ b/src/main/resources/org/glass/css/style.css
@@ -206,6 +206,19 @@ span.error {
     display: inline;
 }
 
+.form {
+    font-size: 12px;
+    width: 100%;
+    margin-top: 10px;
+    background-color: #F2F2F2;
+    border: 1px #B5B5B5 solid;
+    border-radius: 5px;
+}
+
+.form form  {
+    margin-left: 5px;
+}
+
 .code {
     font-family: monospace;
     margin: 1em 0px;
