--- a/src/main/resources/org/glass/velocity/job.vm
+++ b/src/main/resources/org/glass/velocity/job.vm
@@ -11,7 +11,7 @@
         <div class="actions">
             <a href="$root/jobs/$format.html($job.group)/$format.html($job.name)/edit">edit</a>
             <a href="$root/jobs/$format.html($job.group)/$format.html($job.name)/fire">fire now</a>
-            <a href="$root/history?job=${job.jobClass.simpleName}">history</a>
+            <a href="$root/history/$format.html($job.group)/$format.html($job.name)">history</a>
             <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="$root/jobs/$format.html($job.group)/$format.html($job.name)/delete">delete</a>
         </div>
         <div class="table">
