clear logs button in logs

--- a/src/main/resources/com/github/dbourdette/glass/velocity/logs.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/logs.vm
@@ -53,5 +53,8 @@
                 </tbody>
             </table>
         </div>
+        <div class="pages">
+            <a href="${root}/logs/clear">clear logs</a>
+        </div>
 	</body>
 </html>
