clear history button in logs

--- a/src/main/resources/com/github/dbourdette/glass/velocity/history.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/history.vm
@@ -56,5 +56,9 @@
                 </tbody>
             </table>
         </div>
+
+        <div class="pages">
+            <a href="${root}/history/clear">clear logs</a>
+        </div>
 	</body>
 </html>
