--- a/src/main/resources/com/github/dbourdette/glass/css/style.css
+++ b/src/main/resources/com/github/dbourdette/glass/css/style.css
@@ -136,6 +136,19 @@ div.table table {
     border-collapse: collapse;
 }
 
+div.table table col.small {
+    width: 50px;
+}
+
+div.table table col.medium {
+    width: 200px;
+}
+
+div.table table th {
+    white-space: nowrap;
+    padding:0 5px;
+}
+
 div.table tbody tr:nth-child(even) {
     background-color: #FAFAFA;
 }
