--- a/src/main/resources/com/github/dbourdette/glass/velocity/configuration.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/configuration.vm
@@ -10,6 +10,10 @@
         <h2><span>Configuration</span></h2>
         <div class="table">
             <table>
+                <colgroup>
+                    <col class="medium">
+                    <col>
+                </colgroup>
                 <thead>
                     <tr>
                         <th>Key</th>
