--- a/src/main/resources/com/github/dbourdette/glass/velocity/jobs.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/jobs.vm
@@ -20,8 +20,8 @@
                 <tbody>
                     #foreach ($job in $jobs)
                         <tr>
-                            <td><a href="$root/jobs/$format.html($job.group)/$format.html($job.name)">$format.html($job.group) / $format.html($job.name)</a></td>
-                            <td>${job.jobClass.name}</td>
+                            <td style="text-align: center;"><a href="$root/jobs/$format.html($job.group)/$format.html($job.name)">$format.html($job.group) / $format.html($job.name)</a></td>
+                            <td style="text-align: center;">${job.jobClass.name}</td>
                             <td style="text-align: center;">
                                 <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="$root/jobs/$format.html($job.group)/$format.html($job.name)/delete">
                                     <img alt="delete" src="$root/image/delete.png" />
