--- a/src/main/resources/com/github/dbourdette/glass/velocity/triggers.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/triggers.vm
@@ -29,8 +29,8 @@
                         #foreach ($trigger in $jobAndTriggers.triggers)
                             <tr>
                                 <td style="text-align: center;">$format.html($trigger.type)</td>
-                                <td><a href="$root/jobs/$format.html($job.group)/$format.html($job.name)">$format.html($job.group) / $format.html($job.name)</a></td>
-                                <td>$format.html($trigger.group) / $format.html($trigger.name)</td>
+                                <td style="text-align: center;"><a href="$root/jobs/$format.html($job.group)/$format.html($job.name)">$format.html($job.group) / $format.html($job.name)</a></td>
+                                <td style="text-align: center;">$format.html($trigger.group) / $format.html($trigger.name)</td>
                                 <td style="text-align: center;">
                                     $format.date($trigger.startTime)
                                     #if ($trigger.running) &nbsp;<span style="color: red;">running</span> #end
