--- a/src/main/resources/com/github/dbourdette/glass/velocity/configuration.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/configuration.vm
@@ -49,5 +49,7 @@
             </table>
         </div>
 
+        #parse("com/github/dbourdette/glass/velocity/widgets/footer.vm")
+
 	</body>
 </html>
