--- a/src/main/resources/com/github/dbourdette/glass/velocity/dashboard.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/dashboard.vm
@@ -109,5 +109,7 @@
             #end
         </div>
 
+        #parse("com/github/dbourdette/glass/velocity/widgets/footer.vm")
+
 	</body>
 </html>
