--- a/src/main/resources/com/github/dbourdette/glass/velocity/logs.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/logs.vm
@@ -65,5 +65,7 @@
         <div class="pages">
             <a href="${root}/logs/clear">clear logs</a>
         </div>
+
+        #parse("com/github/dbourdette/glass/velocity/widgets/footer.vm")
 	</body>
 </html>
