--- a/src/main/resources/com/github/dbourdette/glass/velocity/new_cron_trigger_form.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/new_cron_trigger_form.vm
@@ -74,5 +74,7 @@
         #parse("com/github/dbourdette/glass/velocity/widgets/args.vm")
 
         #parse("com/github/dbourdette/glass/velocity/widgets/cron_doc.vm")
+
+        #parse("com/github/dbourdette/glass/velocity/widgets/footer.vm")
     </body>
 </html>
