--- a/src/main/resources/com/github/dbourdette/glass/velocity/new_job_form.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/new_job_form.vm
@@ -71,5 +71,7 @@
 
         #parse("com/github/dbourdette/glass/velocity/widgets/args.vm")
 
+        #parse("com/github/dbourdette/glass/velocity/widgets/footer.vm")
+
 	</body>
 </html>
