--- a/src/main/resources/com/github/dbourdette/glass/velocity/simple_trigger_form.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/simple_trigger_form.vm
@@ -73,5 +73,7 @@
         </div>
 
         #parse("com/github/dbourdette/glass/velocity/widgets/args.vm")
+
+        #parse("com/github/dbourdette/glass/velocity/widgets/footer.vm")
     </body>
 </html>
