--- a/src/main/resources/com/github/dbourdette/glass/velocity/triggers.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/triggers.vm
@@ -55,5 +55,7 @@
                 </tbody>
             </table>
         </div>
+
+        #parse("com/github/dbourdette/glass/velocity/widgets/footer.vm")
 	</body>
 </html>
