--- a/src/main/resources/com/github/dbourdette/glass/css/style.css
+++ b/src/main/resources/com/github/dbourdette/glass/css/style.css
@@ -260,3 +260,13 @@ tr.ERROR td:first-child  {
     background: -o-linear-gradient(left, #F28585 0%, #f2f2f2 100px);
     background: -ms-linear-gradient(left, #F28585 0%, #f2f2f2 100px);
 }
+
+.footer {
+    width: 100%;
+    padding-top: 5px;
+}
+
+.footer .version {
+    float: right;
+    font-size: 12px;
+}
