--- a/src/main/resources/com/github/dbourdette/glass/velocity/job.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/job.vm
@@ -100,5 +100,7 @@
                 </tbody>
             </table>
         </div>
+
+        #parse("com/github/dbourdette/glass/velocity/widgets/footer.vm")
 	</body>
 </html>
