--- a/src/main/resources/com/github/dbourdette/glass/velocity/job_form.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/job_form.vm
@@ -49,6 +49,8 @@
         </div>
 
         #parse("com/github/dbourdette/glass/velocity/widgets/args.vm")
+
+        #parse("com/github/dbourdette/glass/velocity/widgets/footer.vm")
 	
 	</body>
 </html>
