--- a/src/main/resources/com/github/dbourdette/glass/velocity/job.vm
+++ b/src/main/resources/com/github/dbourdette/glass/velocity/job.vm
@@ -103,7 +103,7 @@
             </table>
         </div>
 
-        #history("Recent run history" $history.items)
+        #history("h2" "Recent run history" $history.items)
 
         #parse("com/github/dbourdette/glass/velocity/widgets/footer.vm")
 	</body>
